veecle-os-runtime-macros/tests/ui/actor/return_int.stderr
error[E0277]: #[veecle_os_runtime::actor] functions should return either a `Result<Never, _>` or `Never`
 --> tests/ui/actor/return_int.rs:8:6
  |
8 | ) -> i32 {
  |      ^^^ not a valid actor return type
  |
  = help: the trait `IsActorResult` is not implemented for `i32`
  = help: the following other types implement trait `IsActorResult`:
            Never
            Result<Never, E>

error[E0277]: #[veecle_os_runtime::actor] functions should return either a `Result<Never, _>` or `Never`
 --> tests/ui/actor/return_int.rs:4:1
  |
4 | #[veecle_os_runtime_macros::actor]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a valid actor return type
  |
  = help: the trait `IsActorResult` is not implemented for `i32`
  = help: the following other types implement trait `IsActorResult`:
            Never
            Result<Never, E>
